# llm-parliament

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  RELEASING.md  SECURITY.md  config.cloud.yaml  config.example.yaml  config.mixed.yaml  config.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/superpowers/plans/: 2026-05-04-install-routine.md  2026-05-09-hansard-redesign.md
docs/superpowers/specs/: 2026-05-04-install-routine-design.md  2026-05-09-hansard-redesign-design.md  2026-05-19-first-run-wizard-design.md  2026-05-19-resilient-parliament-design.md
scripts/: diagnose-render.py
src/parliament/: __init__.py  cli.py  commands.py  config.py  doctor.py  first_run.py  model_catalog.py  presets.py  tui.py
src/parliament/core/: model_tiers.py  parliament.py  types.py
src/parliament/procedures/: debate.py  division.py  first_reading.py
src/parliament/providers/: __init__.py  anthropic_provider.py  base.py  errors.py  google_provider.py  mock.py  ollama.py  openai_provider.py
src/parliament/render/: __init__.py  cli_live.py  hansard.py  tui_live.py
tests/: conftest.py  test_cli.py  test_commands.py  test_config.py  test_curses_renderer.py  test_division_parsing.py  test_doctor.py  test_doctor_member_viability.py  test_fatal_provider_errors.py  test_first_run_presets.py  test_first_run_wizard.py  test_hansard_level.py  test_keyring.py  test_model_catalog.py  test_model_tiers.py  test_parliament.py  test_progress_events.py  test_provider_errors.py  test_render_markdown.py  test_render_terminal.py  test_renderers.py  test_resolve_hansard_level.py  test_rich_renderer_spinner.py  test_show_debate_flag.py  test_tui.py  test_tui_settings_screen.py  test_tui_show_debate.py  test_types.py
